--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
   background-color: #282c34;
@@ -24,15 +10,62 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.project-card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.image-box {
+  position: relative;
+  flex: 1 1 20%;
+  height: 300px;
+  overflow: hidden;
+  border-radius: 5px;
+  min-width: 280px;
+  max-width: 280px;
+  margin-left: 1em;
+  margin-bottom: 1em;
+
+  .portfolio-image {
+      position: absolute;
+      z-index: 2;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
   }
-  to {
-    transform: rotate(360deg);
+
+  .content {
+      position: absolute;
+      width: 240px;
+      z-index: 5;
+      padding: 10px 20px;      
+      background: linear-gradient(
+          180deg,
+          rgba(0, 0, 0, 0.3) 0,
+          rgba(0, 0, 0, 1)
+      );
+      bottom: 0px;
+  }
+
+  .title {
+      margin-bottom: 0;
+      margin-top: 0;
+      color: #fafafa;
+      font-size: 24px;
+      font-weight: 500;
+      line-height: 24px;
+  } 
+
+}
+
+
+@media screen and (max-width: 1200px) {
+  .project-pard-container {
+      margin-left: auto;
+      margin-right: auto;
+  }
+  .image-box {
+      height: 280px;
   }
 }
